adds skip links

--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
 <header>
   <div class="site-header">
     <h1>Jam Box Studios</h1>
-    <div class="main-nav">
+    <div class="main-nav" id="mainnav">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Reservation</a></li>
         <li><a href="#">Studio</a></li>
+      </ul>
+    </div>
+    <div>
+      <ul class="skip-links">
+        <li><a href="#mainnav">Go to contact information</a></li>
       </ul>
     </div>
     <img src="https://placekitten.com/1200/900" class="banner">
@@ -57,7 +62,7 @@
       </p>
     </div>
     <section>
-      <div class="contact-section">
+      <div class="contact-section" id="contact">
         <h1>Contact Us</h1>
         <form action="thanks.html">
           <label>Full Name</label>
@@ -70,6 +75,11 @@
         </form>
       </div>
     </section>
+  </div>
+  <div>
+    <ul class="skip-links">
+      <li><a href="#mainnav">Go back to the top</a></li>
+    </ul>
   </div>
   <footer>
     <div class="site-footer">
