adds aria roles

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 
 <header>
-  <div class="site-header">
+  <div class="site-header" role="heading">
     <h1>Jam Box Studios</h1>
-    <div class="main-nav" id="mainnav">
+    <div class="main-nav" id="mainnav" role="navigation">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Products</a></li>
@@ -26,17 +26,17 @@
     </div>
     <div>
       <ul class="skip-links">
-        <li><a href="#mainnav">Go to contact information</a></li>
+        <li><a href="#contact">Go to contact information</a></li>
       </ul>
     </div>
-    <img src="https://placekitten.com/1200/900" class="banner">
+    <img src="https://placekitten.com/1200/900" class="banner" role="banner">
   </div>
 </header>
 
 <body>
   <div class="container">
     <main>
-      <div class="main-content">
+      <div class="main-content" role="contentinfo">
         <h1>Welcome to Jam Box</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa
           eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio
@@ -45,7 +45,7 @@
           omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto
           error voluptatibus.</p>
     </main>
-    <div class="owner">
+    <div class="owner" role="list">
       <h1>Meet the owner</h1>
       <ul>
         <li>Name: John Doe</li>
@@ -61,7 +61,7 @@
         B3T 0L0
       </p>
     </div>
-    <section>
+    <section role="form">
       <div class="contact-section" id="contact">
         <h1>Contact Us</h1>
         <form action="thanks.html">
@@ -71,7 +71,7 @@
           <input type="text" placeholder="Subject">
           <b>Your Message</b>
           <textarea></textarea>
-          <button type="submit">Send</button>
+          <button type="submit" role="button">Send</button>
         </form>
       </div>
     </section>
